<resources>
    <string name="STR_LGHome_LOADING_NORMAL">Loading...</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed. You can remove it, or search for the app and install it manually.</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_search">Search</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_app_usage_settings">App usage settings</string>
    <string name="accessibility_button">Button</string>
    <string name="accessibility_close">@string/app_trash_close</string>
    <string name="accessibility_recent_apps">Recent apps</string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_bar_up_description">Navigate up</string>
    <string name="action_bubble_message_expand">com.lge.systemui.action.BUBBLE_MESSAGE_EXPAND</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_deep_shortcut">Shortcuts</string>
    <string name="action_finish_folderplus">com.lge.launcher3.intent.action.FINISH_FOLDERPLUS</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_kill_process">com.lge.launcher3.intent.action.KILL_PROCESS</string>
    <string name="action_mdm_admin_activate">com.lge.mdm.intent.action.DEVICE_ADMIN_ACTIVATE</string>
    <string name="action_mdm_admin_deactivate">com.lge.mdm.intent.action.DEVICE_ADMIN_DEACTIVATE</string>
    <string name="action_mdm_change_uninstallpolicy">com.lge.mdm.intent.action.packge.UNINSTALL_CHANGED</string>
    <string name="action_move">Move item</string>
    <string name="action_move_here">Move item here</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_reload_customcontent">com.lge.launcher3.intent.action.RELOAD_CUSTOMCONTENT</string>
    <string name="action_reload_tphonemode">com.lge.launcher3.intent.action.RELOAD_TPHONEMODE</string>
    <string name="action_resize">Resize</string>
    <string name="action_schedule_uninstall">com.lge.launcher3.intent.action.SCHEDULE_UNINSTALL_JOB</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="action_share">Share</string>
    <string name="action_show_additional_screen">com.lge.launcher3.intent.action.SHOW_ADDITIONAL_SCREEN</string>
    <string name="action_show_delete_dialog">com.lge.launcher3.intent.action.SHOW_DELETE_DIALOG</string>
    <string name="action_show_icon_frames_settings">com.lge.launcher3.intent.action.SHOW_ICON_FRAMES_SETTINGS</string>
    <string name="action_show_recentuninstall">com.lge.launcher3.intent.action.SHOW_RECENTLY_UNINSTALLED_LIST</string>
    <string name="action_show_reinstall_dialog">com.lge.launcher3.intent.action.SHOW_REINSTALL_DIALOG</string>
    <string name="action_show_sbsetting">com.lge.launcher3.intent.action.SHOW_SBSetting</string>
    <string name="action_show_screen_effect_settings">com.lge.launcher3.intent.action.SHOW_SCREEN_EFFECT_SETTINGS</string>
    <string name="action_show_second_screen_effect_settings">com.lge.launcher3.intent.action.SHOW_SECOND_SCREEN_EFFECT_SETTINGS</string>
    <string name="action_show_setting">com.lge.launcher3.intent.action.SHOW_SETTING</string>
    <string name="action_show_swivel_setting">com.lge.launcher3.intent.action.SHOW_SWIVEL_SETTING</string>
    <string name="action_show_wallpaper_list_activity">com.lge.launcher3.intent.action.SHOW_WALLPAPER_LIST_ACTIVITY</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="add_app_shortcut">Add app shortcut</string>
    <string name="add_automatically">Auto-add</string>
    <string name="add_item_request_drag_hint">Touch &amp; hold to place manually</string>
    <string name="add_item_request_drag_hint_non_swivel">Touch and hold the app icon to add it manually to Home screen.</string>
    <string name="add_item_request_drag_hint_swivel">Touch and hold the app icon to add it manually to Basic Home. You can also select homes below and automatically add it.</string>
    <string name="add_item_request_drag_hint_swivel_mode">Select the homes you want to add the icon to.</string>
    <string name="add_item_request_select_home">SELECT HOME</string>
    <string name="add_item_request_select_home_basic_home">Home</string>
    <string name="add_item_request_select_home_swing_home" formatted="false">%s (%s only)</string>
    <string name="add_to_folder">Add to folder: %1$s</string>
    <string name="add_to_folder_with_app">Add to folder with %1$s</string>
    <string name="added_to_folder">Item added to folder</string>
    <string name="additional_screen_name">Left Home screen</string>
    <string name="all_apps_button">App drawer</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="all_apps_label">All apps</string>
    <string name="all_apps_loading_message">Loading Apps…</string>
    <string name="all_apps_no_search_results">No Apps found matching \"%1$s\"</string>
    <string name="all_apps_prediction_tip">Your predicted apps</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_download_apps_button_label">Downloads</string>
    <string name="allapps_hide_apps_guide_text">Remove apps from the app drawer. To add an app back, uncheck it.</string>
    <string name="allapps_hide_apps_guide_text_vzw">Remove apps from the app list. To add an app back, uncheck it.</string>
    <string name="allapps_sortappsby_download_date">@string/sortappsby_download_date</string>
    <string name="allapps_sortappsby_download_date_dialog_desc">All apps in the app drawer will be sorted by the date downloaded.</string>
    <string name="allapps_sortappsby_download_date_dialog_desc_vzw">All apps in the apps list will be sorted by the date downloaded.</string>
    <string name="allapps_sortappsby_download_date_toast_desc">@string/sortappsby_download_date_toast_desc</string>
    <string name="allapps_sortappsby_name">@string/sortappsby_name</string>
    <string name="allapps_sortappsby_name_dialog_desc">All apps in the app drawer will be sorted alphabetically by name.</string>
    <string name="allapps_sortappsby_name_dialog_desc_vzw">All apps in the apps list will be sorted alphabetically by name.</string>
    <string name="allapps_sortappsby_name_toast_desc">@string/sortappsby_name_toast_desc</string>
    <string name="allapps_sortappsby_title">@string/sortappsby_title</string>
    <string name="allow_rotation_desc">When phone is rotated</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="app_drawer_icons_text">App drawer icon</string>
    <string name="app_filter_class">com.lge.launcher3.hideapps.AppFilterImpl</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="app_launch_tracker_class" />
    <string name="app_name">Launcher3</string>
    <string name="app_pin_title">App pinning</string>
    <string name="app_shortcut_remove_from_home">Remove from home</string>
    <string name="app_trash_ask_delete_app_confirm_message">Permanently delete this app?</string>
    <string name="app_trash_ask_delete_apps_confirm_message">Permanently delete the selected apps?</string>
    <string name="app_trash_ask_move_restore_message">%s is now in the trash. You can change your mind and restore the app in the next 24 hours. After that, it will be permanently deleted. If you want to permanently delete the app now, empty the trash in Settings &gt; Apps &gt; Trash.</string>
    <string name="app_trash_ask_move_restore_message_ux6">%s is now in the trash. If you change your mind and want to restore the app in the next 24 hours, touch and hold an empty space on the Home screen to move to the App trash.</string>
    <string name="app_trash_title">App trash</string>
    <string name="cancel_target_label">@string/cancel_action</string>
    <string name="delete_target_delete_label">Delete</string>
    <string name="delete_target_label">Remove</string>
    <string name="disable_target_label">Disable</string>
    <string name="dynamic_gird_label">Grid</string>
    <string name="hotseat_edu_accept">Get app suggestions</string>
    <string name="hotseat_edu_dismiss">No thanks</string>
    <string name="hotseat_edu_message_migrate">Easily access your most-used apps right on the Home screen. Suggestions will change based on your routines. Apps on the bottom row will move up to your Home screen.</string>
    <string name="hotseat_edu_title_migrate">Get app suggestions on the bottom row of your Home screen</string>
    <string name="menu_search">Search</string>
    <string name="personal_tab">Personal</string>
    <string name="recentapps_name_multi_window">Multi window</string>
    <string name="recentapps_task_dismiss_button">Dismiss</string>
    <string name="recentapps_task_pin_button">Pin app</string>
    <string name="recents_empty_message">No recent items</string>
    <string name="sp_HomeScreenSettings_NORMAL">Home screen settings</string>
    <string name="sp_option_theme_NORMAL">Theme</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="widget_button_text">Widgets</string>
    <string name="work_apps_pause_btn_text">Pause work apps</string>
    <string name="work_apps_paused_body">Your work apps can\'t send you notifications, use your battery, or access your location</string>
    <string name="work_apps_paused_title">Work apps are paused</string>
    <string name="work_tab">Work</string>
</resources>