<?xml version="1.0" encoding="utf-8"?>
<com.lge.launcher3.OverViewPanel xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/widget_button"
            android:text="@string/widget_button_text"
            android:drawableTop="@drawable/widget_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/wallpaper_button"
            android:text="@string/wallpaper_button_text"
            android:drawableTop="@drawable/wallpaper_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/theme_button"
            android:text="@string/sp_option_theme_NORMAL"
            android:drawableTop="@drawable/theme_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/settings_button_vzw"
            android:text="@string/sp_HomeScreenSettings_NORMAL"
            android:drawableTop="@drawable/setting_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/dynamic_gird_button"
            android:text="@string/dynamic_gird_label"
            android:drawableTop="@drawable/grid_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/settings_button"
            android:text="@string/sp_HomeScreenSettings_NORMAL"
            android:drawableTop="@drawable/setting_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/swivel_home_settings_button"
            android:drawableTop="@drawable/setting_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
    <FrameLayout
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:id="@+id/recent_uninstall_button"
            android:text="@string/app_trash_title"
            android:drawableTop="@drawable/recent_uninstall_button"
            style="@style/OverviewButton"/>
    </FrameLayout>
</com.lge.launcher3.OverViewPanel>
