<?xml version="1.0" encoding="utf-8"?>
<com.android.quickstep.views.TaskHeaderView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="top|center_horizontal"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/task_header_bottom_padding"
    android:layout_width="match_parent"
    android:layout_height="@dimen/task_thumbnail_top_margin">
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/icon"
        android:layout_width="@dimen/overview_header_icon_size"
        android:layout_height="@dimen/overview_header_icon_size"
        android:layout_weight="0"
        android:paddingStart="0dp"/>
    <TextView
        android:textSize="@dimen/overview_header_text_size"
        android:textStyle="bold"
        android:textColor="@color/white_color"
        android:ellipsize="marquee"
        android:layout_gravity="center_vertical"
        android:id="@+id/title"
        android:fadingEdge="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recents_empty_message"
        android:singleLine="true"
        android:layout_weight="1"
        android:textAlignment="viewStart"
        android:layout_marginStart="9dp"
        android:forceHasOverlappingRendering="false"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/multi_window_btn"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:visibility="gone"
        android:nextFocusRight="@+id/pinned_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/recentapp_ic_dualwindow_normal"
        android:layout_weight="0"
        android:contentDescription="@string/recentapps_name_multi_window"/>
    <ImageView
        android:layout_gravity="center"
        android:id="@+id/pinned_btn"
        android:focusable="true"
        android:visibility="invisible"
        android:nextFocusLeft="@+id/multi_window_btn"
        android:nextFocusRight="@+id/dismiss_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_recent_badge_pin"
        android:layout_weight="0"
        android:contentDescription="@string/recentapps_task_pin_button"/>
    <ImageView
        android:layout_gravity="center_vertical"
        android:id="@+id/dismiss_btn"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        android:visibility="gone"
        android:nextFocusLeft="@+id/pinned_btn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/recentapp_ic_delete_normal"
        android:layout_weight="0"
        android:contentDescription="@string/recentapps_task_dismiss_button"/>
</com.android.quickstep.views.TaskHeaderView>
