<?xml version="1.0" encoding="utf-8"?>
<com.lge.launcher3.allapps.AllAppsHost xmlns:android="http://schemas.android.com/apk/res/android" xmlns:launcher="http://schemas.android.com/apk/res/com.lge.launcher3"
    android:id="@+id/lg_apps_customize_tab_host"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">
    <View
        android:layout_gravity="center"
        android:id="@+id/allapps_reveal_view"
        android:focusable="false"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="2dp"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/topmenu_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:id="@+id/head_container"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="end|center_vertical"
                android:id="@+id/search_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="@dimen/all_apps_more_right_padding">
                <ImageButton
                    android:id="@+id/lg_page_menu_search_btn"
                    android:background="@drawable/menu_tabhost_button_selector"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:focusable="true"
                    android:layout_width="@dimen/hig_actionbar_height"
                    android:layout_height="@dimen/hig_actionbar_height"
                    android:src="@drawable/ic_menu_search_selector"
                    android:scaleType="center"
                    android:contentDescription="@string/menu_search"/>
                <ImageButton
                    android:id="@+id/lg_pagemenu_optionsmenu_button"
                    android:background="@drawable/menu_tabhost_button_selector"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:focusable="true"
                    android:layout_width="@dimen/hig_optionmenu_witdh"
                    android:layout_height="@dimen/hig_actionbar_height"
                    android:src="@drawable/ic_t_more_tint"
                    android:scaleType="center"
                    android:layoutDirection="locale"/>
            </LinearLayout>
        </LinearLayout>
        <com.android.launcher3.allapps.PersonalWorkSlidingTabStrip
            android:orientation="horizontal"
            android:id="@+id/tabs"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/all_apps_header_tab_height"
            android:layout_marginLeft="@dimen/all_apps_tabs_side_padding"
            android:layout_marginRight="@dimen/all_apps_tabs_side_padding"
            style="@style/TextHeadline">
            <Button
                android:textSize="14sp"
                android:textColor="@color/all_apps_tab_text"
                android:id="@+id/tab_personal"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/personal_tab"
                android:layout_weight="1"/>
            <Button
                android:textSize="14sp"
                android:textColor="@color/all_apps_tab_text"
                android:id="@+id/tab_work"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/work_tab"
                android:layout_weight="1"/>
        </com.android.launcher3.allapps.PersonalWorkSlidingTabStrip>
        <FrameLayout
            android:id="@+id/apps_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.android.launcher3.FocusIndicatorView
                android:id="@+id/focus_indicator"
                android:layout_width="52dp"
                android:layout_height="52dp"/>
            <com.lge.launcher3.allapps.AllAppsPagedView
                android:layout_gravity="top"
                android:id="@+id/lg_allapps_pagedview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                launcher:pageIndicator="@+id/menu_page_indicator"
                launcher:pageLayoutHeightGap="0dp"
                launcher:pageLayoutPaddingBottom="0dp"
                launcher:pageLayoutPaddingLeft="@dimen/pagedview_cellLayout_padding_left"
                launcher:pageLayoutPaddingRight="@dimen/pagedview_cellLayout_padding_right"
                launcher:pageLayoutPaddingTop="0dp"
                launcher:pageLayoutWidthGap="0dp"/>
            <include
                android:layout_gravity="center_horizontal"
                android:id="@+id/menu_page_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/page_indicator"/>
            <include layout="@layout/no_search_result"/>
        </FrameLayout>
    </LinearLayout>
    <View
        android:id="@+id/lg_all_apps_transparent"
        android:background="@color/lg_folder_open_dim_color"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <include
        android:id="@+id/all_apps_search_bar"
        layout="@layout/lg_all_apps_search_bar"/>
    <include
        android:id="@+id/head_container_land"
        layout="@layout/head_container_land"/>
    <LinearLayout
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/work_off_content_layout"
        android:background="@drawable/work_apps_toggle_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/all_apps_tab_text"
            android:id="@+id/work_off_content_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/work_apps_paused_title"/>
        <TextView
            android:textSize="14dp"
            android:textColor="@color/all_apps_tab_text"
            android:id="@+id/work_off_content_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/work_apps_paused_body"/>
    </LinearLayout>
    <Button
        android:textSize="14dp"
        android:textColor="@color/all_apps_tab_text"
        android:layout_gravity="bottom|right"
        android:id="@+id/fab_work_profile_switch"
        android:background="@drawable/work_apps_toggle_background"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="50dp"
        android:text="@string/work_apps_pause_btn_text"/>
</com.lge.launcher3.allapps.AllAppsHost>
